# solum

./: .gitignore  Anchor.toml  CNAME  Cargo.toml  README.md  index.html  package.json
app/: dashboard.html  por-demo.ts  por.ts  reserves.ts  serve.ts
automation/: README.md  award.ts  claim-server.ts  claim.test.ts  claim.ts  creator-fees.ts  cycle.test.ts  draw.ts  fees.ts  fuzz-jackpot.ts  init-devnet.ts  init-mainnet.ts  mainnet-buy-proof.ts  mainnet-vrf-smoke.ts  merkle.ts  ops-dashboard.html  probe-seedslot.ts  run-devnet-demo.ts  run-flow.test.ts  run.ts  status.ts  stress-500.ts  twab.test.ts  twab.ts  verify-draw.test.ts  verify-draw.ts
deploy/: README.md  env.example  host-setup.sh  nginx-solum.conf  solum-bot.service  solum-claim.service
docs/: AUDIT.md  CLAIM.md  DEVNET.md  JACKPOT.md  LAUNCH.md  MECHANISM.md  PRODUCTION-ORACLE-VENUE.md  RUNBOOK.md  SECURITY-ARCHITECTURE.md  STAKING.md  TESTING.md  VERIFY.md
engine/: README.md
programs/ballast/: Cargo.toml
programs/ballast/src/: lib.rs
programs/mock-venue/: Cargo.toml
programs/mock-venue/src/: lib.rs
programs/solum/: Cargo.toml
programs/solum/src/: lib.rs
scripts/: _smoke-setup.ts  ballast.ts  deploy-devnet.sh  deploy-mainnet.sh  solum.ts
tests/: fuzz-invariants.ts  redeem.ts  standalone-backing.ts  standalone-fees.ts  standalone-hardening.ts  standalone-jackpot.ts  standalone-redeem.ts  standalone-stake.ts
winners/: index.html
