[workspace]
members = ["programs/*"]
resolver = "2"

# Safety: overflow checks ON in release too. We also use explicit checked math
# on every value path, but this is belt-and-suspenders against a missed spot.
[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
