[package]
name = "ballast"
version = "0.1.0"
description = "Ballast — asset-backed launchpad vault program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ballast"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
