[package]
name = "mock-venue"
version = "0.1.0"
description = "TEST-ONLY mock swap venue implementing the Ballast Venue ABI v1"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_venue"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
