[package]
name = "solum"
version = "0.1.0"
description = "Solum — non-custodial redeemable-floor vault program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solum"

[features]
default = ["devnet-oracle", "devnet-vrf"]
# devnet-oracle: admin-published PriceFeed (set_price) — for local validator tests.
devnet-oracle = []
# pyth-oracle: real Pyth pull-oracle (PriceUpdateV2) — for public devnet / mainnet.
pyth-oracle = ["dep:pyth-solana-receiver-sdk"]
# devnet-vrf: snapshotter-injected randomness in settle_draw — for local validator tests.
devnet-vrf = []
# switchboard-vrf: real Switchboard On-Demand randomness (production draws). See docs/JACKPOT.md.
switchboard-vrf = ["dep:switchboard-on-demand"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
pyth-solana-receiver-sdk = { version = "0.6.1", optional = true }
switchboard-on-demand = { version = "0.13", optional = true }
